# debbugs-summarize

./: .gitignore  CLAUDE.md  Makefile  README.in.rst  README.md  README.rst  chat-prompt.txt  chat.py  debbugs-summarize-gnus-backend.el  debbugs-summarize-package.el  debbugs-summarize.el  gnus-summarize-package.el  gnus-summarize.el  nndebsum.el  nnsummarize.el  pyproject.toml  summarize-prompt.txt  summarize.py  test-debbugs-summarize.el  test-gnus-summarize.el
.github/workflows/: compile.yml  release.yml  test.yml
