[tool.pyright]
exclude = [
  "**/node_modules",
  "**/__pycache__",
]
venvPath = "venvs"
venv = "gnus-summarize"

[project]
name = "gnus-summarize"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "google-generativeai",
]
authors = [
  {name = "dickmao", email = "richard@commandlinesystems.com"},
]

[project.optional-dependencies]
test = [
  "pytest",
]
